@@ -1,5 +1,10 @@
 Revision history for Dist-Zilla-App-Command-shell.
 
+{{NEXT}}
+	DZil is not clean between commands. To avoid making broken releases
+	  (as I did for Dist-Zilla-Plugin-Version-FromSubversion-1.000002),
+	  the 'release' command is now forbidden in DZil Shell.
+
 0.005    2011-11-09    Olivier Mengué (DOLMEN)
 	Fix for the display of exceptions in DZ commands.
 	Add dummy tests just for raising Kwalitee.
